# hge-unix

./: .gitignore  .hgignore  CMakeLists.txt  ProjectHome.md  hge-unix-c.pc.in  hge-unix.pc.in  license.txt  readme.txt
c_api/: CMakeLists.txt
c_api/include/: hge_c.h  hgeanim_c.h  hgecolor_c.h  hgedistort_c.h  hgefont_c.h  hgegui_c.h  hgeguictrls_c.h  hgeparticle_c.h  hgerect_c.h  hgeresource_c.h  hgesprite_c.h  hgestrings_c.h  hgevector_c.h
c_api/src/: CMakeLists.txt  hge.cpp  hge_impl.h  hgeanim.cpp  hgeanim_impl.h  hgecolor.cpp  hgedistort.cpp  hgedistort_impl.h  hgefont.cpp  hgefont_impl.h  hgegui.cpp  hgeguictrls.cpp  hgeparticle.cpp  hgeparticle_impl.h  hgerect.cpp  hgerect_impl.h  hgeresource.cpp  hgesprite.cpp  hgesprite_impl.h  hgestrings.cpp  hgestrings_impl.h  hgevector.cpp
c_api/src/lua/: hge.c
c_api/tutorials/: CMakeLists.txt
c_api/tutorials/tutorial01/: hge_tut01.c
c_api/tutorials/tutorial02/: hge_tut02.c
c_api/tutorials/tutorial03/: hge_tut03.c
c_api/tutorials/tutorial04/: hge_tut04.c
c_api/tutorials/tutorial05/: hge_tut05.c
c_api/tutorials/tutorial07/: hge_tut07.c
cmake/: FindSDL2.cmake
doc/: index.html
doc/html/: cnt_fbuilder.html  cnt_hgeanim.html  cnt_hgecolorhsv.html  cnt_hgecolorrgb.html  cnt_hgeconst.html  cnt_hgedata.html  cnt_hgedistort.html  cnt_hgefont.html  cnt_hgefunc.html  cnt_hgegui.html  cnt_hgeguio.html  cnt_hgeparticle.html  cnt_hgepmanager.html  cnt_hgerect.html  cnt_hgeresource.html  cnt_hgesprite.html  cnt_hgestring.html  cnt_hgevector.html  cnt_main.html  cnt_peditor.html  cnt_setup.html  cnt_tutorials.html  fbuilder__main.html  fbuilder_fontcode.html  fbuilder_fontconv.html  fbuilder_ini.html  fbuilder_interface.html  hge.css  hge.js  hgeanim__main.html  hgeanim_constructor.html  hgeanim_getframe.html  hgeanim_getframes.html  hgeanim_getmode.html  hgeanim_getspeed.html  hgeanim_isplaying.html  hgeanim_operators.html  hgeanim_play.html  hgeanim_resume.html  hgeanim_setframe.html  (+368 more)
include/: hge.h  hgeguictrls.h  hgeparticle.h  hgeresource.h  hgevector.h  unix_compat.h
src/core/: CMakeLists.txt  Makefile.win  demo.cpp  graphics_unix.cpp  hge.bpr  hge.sln  hge.vcproj  hge_glfuncs.h  hge_impl.h  hge_impl_unix.h  ini_unix.cpp  input_unix.cpp  macosx_support.mm  power_unix.cpp  random.cpp  resource.cpp  resource_unix.cpp  sound.cpp  sound_libbass.cpp  sound_openal.cpp  sound_unix.cpp  system.cpp  system_unix.cpp  unix_compat.h
src/core/CxImage/: license.txt  ximabmp.cpp  ximacfg.h  ximadef.h  ximadsp.cpp  ximaenc.cpp  ximaexif.cpp  ximage.cpp  ximage.h  ximagif.cpp  ximahist.cpp  ximaico.cpp  ximainfo.cpp  ximaint.cpp  ximajas.cpp  ximajbg.cpp  ximajpg.cpp  ximalpha.cpp  ximalyr.cpp  ximamng.cpp  ximapal.cpp  ximapcx.cpp  ximapng.cpp  ximapng.h  ximapsd.cpp  ximaraw.cpp  ximasel.cpp  ximaska.cpp  ximatga.cpp  ximatif.cpp  ximatran.cpp  ximawbmp.cpp  ximawnd.cpp  xiofile.h
src/core/ZLIB/: ioapi.h
src/core/common/: demo.cpp  random.cpp
src/core/scripting/lua/: CMakeLists.txt
src/core/scripting/lua/binding/: hge.lua  hgeBinding.lua  hgeanim.lua  hgecolor.lua  hgedistort.lua  hgefont.lua  hgegui.lua  hgeguictrls.lua  hgeparticle.lua  hgerect.lua  hgeresource.lua  hgesprite.lua  hgestrings.lua  hgevector.lua
src/core/scripting/lua/example/: CMakeLists.txt  hge_init.lua  hge_script.lua  main.cpp
src/core/scripting/lua/luna-gen/: luna_gen.lua
src/core/unix/: graphics.cpp  hge_glfuncs.h  hge_impl.h  ini.cpp  input.cpp  power.cpp  resource.cpp  sound_openal.cpp  system.cpp
src/core/windows/: hge.dev  hge.dsp  hge_impl.h  input.cpp  resource.cpp  system.cpp
src/core/windows/BASS/: bass.h
src/fontconv/: fontconv.cpp
src/fonted/: commands.cpp  fonted.cpp  fonted.h  fontlist.cpp  fontlist.h  generate.cpp  hgeguirange.h  savepng.cpp
src/helpers/: hgeanim.cpp  hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  hgeparticle.cpp  hgepmanager.cpp  hgerect.cpp  hgeresource.cpp  hgesprite.cpp  hgestrings.cpp  hgevector.cpp  parser.cpp  parser.h  resources.cpp  resources.h
src/lua/: hge.cpp  hge_lua.h
src/particleed/: commands.cpp  particleed.cpp  particleed.h
src/pngopt/: pngopt.cpp  pngopt.h  savepngpitch.cpp
src/pngopt/libPNG/: png.h
src/texasm/: gfx_object.h  optimized_texture.cpp  sprite_object.h  texasm.cpp  texasm.h  texture_assembler.cpp  texture_assembler.h  writePNG.cpp
tools/: CMakeLists.txt
tools/particleed/: particleed.ini
tutorials/: CMakeLists.txt
tutorials/tutorial01/: hge_tut01.cpp  hge_tut01.dsp  hge_tut01.dsw
tutorials/tutorial02/: hge_tut02.cpp  hge_tut02.dsp  hge_tut02.dsw
tutorials/tutorial03/: hge_tut03.cpp  hge_tut03.dsp  hge_tut03.dsw
tutorials/tutorial04/: hge_tut04.cpp  hge_tut04.dsp  hge_tut04.dsw
tutorials/tutorial05/: hge_tut05.cpp  hge_tut05.dsp  hge_tut05.dsw
tutorials/tutorial06/: hge_tut06.cpp  hge_tut06.dsp  hge_tut06.dsw  menuitem.cpp  menuitem.h
tutorials/tutorial07/: hge_tut07.cpp  hge_tut07.dsp  hge_tut07.dsw
tutorials/tutorial08/: hge_tut08.cpp  hge_tut08.dsp  hge_tut08.dsw
